# ccproxy-api

./: .ccproxy.toml  .env.example  .gitignore  .pre-commit-config.yaml  BRANCH_COMPARISON.md  CHANGELOG-codex.md  CHANGELOG.md  CODEX_IMPROVEMENTS.md  CONTRIBUTING.md  CONVENTIONS.md  DYNAMIC_MODELS_IMPLEMENTATION.md  DYNAMIC_MODELS_INTEGRATION_PROPOSAL.md  DYNAMIC_MODEL_INFO.md  Dockerfile  Makefile  README.md  README_POOL_DEBUGGING.md  ROLLOUT_CHECKLIST.md  SDK_MIGRATION_PLAN.md  TESTING.md  ccproxy.toml  config.example.toml  conftest.py  coverage.xml  devenv.nix  docker-compose.yml  entrypoint.sh  flake.nix  main.py  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  test_dynamic_standalone.py  tox-py311-only.ini  verify_pool_works.sh  want_xml.xml  zen_precommit.changeset
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml
ccproxy/: __init__.py  main.py
ccproxy/adapters/: base.py
ccproxy/api/: __init__.py  app.py  bootstrap.py  dependencies.py  responses.py  shared_handlers.py
ccproxy/auth/: __init__.py  base.py  bearer.py  conditional.py  credentials_adapter.py  dependencies.py  manager.py  models.py
ccproxy/claude_sdk/: client.py  converter.py  manager.py  options.py  pool.py  streaming.py
ccproxy/cli/: __init__.py  __main__.py  app.py  helpers.py  main.py  oauth_integration.py
ccproxy/config/: auth.py  binary.py  claude.py  codex.py  constants.py  core.py  cors.py  docker_settings.py  http.py  logging.py  observability.py  pricing.py  scheduler.py  security.py  server.py  settings.py
ccproxy/core/: __init__.py  async_task_manager.py  async_utils.py  codex_transformers.py  constants.py  errors.py  http.py  http_client.py  http_transformers.py  interfaces.py  proxy.py  (+6 more)
claude_code_proxy/: __init__.py  cli.py  exceptions.py  main.py
claude_proxy/: exceptions.py  main.py
data/: metrics.db
docs/: OAUTH_PLUGIN_ARCHITECTURE.md  PLUGIN_AUTHORING.md  PLUGIN_SYSTEM_DOCUMENTATION.md  README.md  api-reference.md  architecture.md  configuration.md  deployment.md  examples.md  gen_ref_pages.py  index.md  metrics-api.md  plugin-api-reference.md  plugin-dependency-system.md  plugin-reorganization-plan.md  systemd-setup.md
examples/: ai_code_discussion_demo.py  anthropic_tools_demo.py  client.py  dynamic_model_info_demo.py  openai_anthropic_conversation_demo.py  openai_json_object_example.sh  openai_json_schema_example.sh  openai_structured_response_demo.py  openai_tools_demo.py  pool_performance_test.py  pool_speed_comparison.py  test_dynamic_integration.py  test_pool_logging.py  textual_chat_agent.py
plugins/: claude_api_plugin.py  claude_sdk_plugin.py  codex_plugin.py
plugins/access_log/: config.py  observer.py  plugin.py  pyproject.toml  writer.py
plugins/claude_api/: README.md  __init__.py  adapter.py  config.py  detection_service.py  health.py  plugin.py  pyproject.toml  routes.py  streaming_metrics.py  tasks.py  upstream_extractor.py
plugins/claude_api/auth/: manager.py  models.py  storage.py
plugins/claude_api/auth/oauth/: __init__.py  client.py  config.py  provider.py
plugins/claude_api/transformers/: __init__.py  request.py  response.py
plugins/claude_sdk/: README.md  __init__.py  adapter.py  auth.py  client.py  config.py  converter.py  detection_service.py  format_adapter.py  handler.py  health.py  manager.py  message_queue.py  models.py  options.py  plugin.py  pyproject.toml  routes.py  session_client.py  session_pool.py  stream_handle.py  stream_worker.py  streaming.py  tasks.py
plugins/claude_sdk/transformers/: __init__.py  request.py  response.py
plugins/claude_sdk/utils/: __init__.py
plugins/codex/: README.md  __init__.py  adapter.py  config.py  detection_service.py  format_adapter.py  health.py  plugin.py  pyproject.toml  routes.py  streaming_metrics.py  tasks.py  upstream_extractor.py
plugins/codex/auth/: manager.py  models.py  storage.py
plugins/codex/auth/oauth/: __init__.py  client.py  config.py  provider.py
plugins/codex/transformers/: __init__.py  request.py  response.py
plugins/permissions/: README.md  mcp.py  plugin.py  pyproject.toml  routes.py  service.py
plugins/permissions/handlers/: cli.py  terminal.py
plugins/pricing/: cache.py  config.py  exceptions.py  helper.py  loader.py  plugin.py  pyproject.toml  service.py  tasks.py  updater.py
plugins/raw_http_logger/: README.md  __init__.py  config.py  logger.py  middleware.py  plugin.py  pyproject.toml  transport.py  v2_plugin.py
plugins/request_tracer/: __init__.py  config.py  middleware.py  observer.py  plugin.py  pyproject.toml  tracer.py  transport.py
plugins/request_tracer/formatters/: __init__.py  json.py  raw.py
scripts/: benchmark_startup_node.py  build-docs.sh  check_import_boundaries.py  codex_full_auth.sh  debug-no-stream-all.sh  debug-stream-all.sh  entrypoint.sh  format_version.py  last_request.sh  serve-docs.sh  setup-systemd.sh  show_request.sh  test_endpoint.py  test_endpoint.sh  test_streaming_metrics_all.py  test_streaming_metrics_verified.py  traffic_generator.py
systemd/: ccproxy.service.template
test_config/: test-config.toml
tests/: conftest.py  test_access_logger_integration.py  test_adapter_dispatch.py  test_anthropic_streaming.py  test_api.py  test_auth.py  test_chat_router.py  test_claude_client.py  test_claude_pool.py  test_claude_wrapper.py  test_cli_config.py  test_cli_integration.py  test_cli_integration.py.disabled  test_cli_unit.py  test_cli_unit.py.disabled  test_commands_config.py  test_config.py  test_credentials.py  test_credentials_refactored.py  test_docker_builder.py  test_docker_integration.py  test_exceptions.py  test_fastapi_factory.py  test_handler_config.py  test_helper.py  test_keyring_storage.py  test_message_models.py  test_messages.py  test_messages_api.py  test_messages_claudecode_anthropic.py  test_metrics_api.py  test_model_translation_regression.py  test_models.py  test_new_url_structure.py  test_observability.py  test_openai_endpoints.py  test_openai_model_validation.py  test_openai_streaming.py  test_openai_streaming_formatter.py  test_openai_streaming_usage.py  (+17 more)
(+706 files in other folders)
