[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccproxy-plugin-access-log"
version = "1.0.0"
description = "Access log plugin for CCProxy with combined, common, and structured formats"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."ccproxy.plugins"]
access_log = "plugins.access_log.plugin:factory"
