[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccproxy-request-tracer"
version = "2.0.0"
description = "Unified request tracer plugin for CCProxy with structured JSON and raw HTTP logging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "aiofiles",
    "structlog",
]

[project.entry-points."ccproxy.plugins"]
request_tracer = "plugins.request_tracer.plugin:factory"

[tool.hatch.build.targets.wheel]
packages = ["."]
